[gd_scene load_steps=4 format=3 uid="uid://du3336fef0ohc"]

[ext_resource type="Script" path="res://UI/how_to_play.gd" id="1_cgtel"]
[ext_resource type="Texture2D" uid="uid://da2tsfxsrsxqq" path="res://Art/Controls.PNG" id="2_rfkmb"]
[ext_resource type="Texture2D" uid="uid://b2usx8nfaja7t" path="res://Art/Instructions.PNG" id="3_5f4bb"]

[node name="how_to_play" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = 4.0
offset_right = -15.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgtel")

[node name="instructions" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -169.0
offset_right = 121.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5f4bb")

[node name="backBtn" type="Button" parent="instructions"]
layout_mode = 0
offset_left = 4.0
offset_top = 318.0
offset_right = 27.0
offset_bottom = 334.0

[node name="controls" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -169.0
offset_right = 120.0
offset_bottom = 169.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rfkmb")

[node name="nextBtn" type="Button" parent="controls"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -25.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0

[connection signal="pressed" from="instructions/backBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="controls/nextBtn" to="." method="_on_next_btn_pressed"]
